--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello Sky Tree</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img  height="300px" width="200px" src="./a.jpg">
+<h1>Hello I am Zelalam Ambisa</h1>
+<h1>I am Single</h1>
+<h1>If your are girl Please Contact me</h1>
+
+
+</body>
+</html>
