--- a/index.html
+++ b/index.html
@@ -312,10 +312,7 @@
                 </h2>
 
                 <p class="section-text">
-                  Aliquam tristique libero at dui sodales, et placerat orci
-                  lobortis. Donec metus lorem, vulputate at
-                  sapien sit amet,
-                  auctor iaculis lorem.
+                  Since our company's establishment, we have undertaken and completed numerous projects for local government, government offices, renowned companies, and schools. Our diverse expertise spans across digital marketing, web design, outdoor branding, and web development. With a dedicated team and innovative approach, we have consistently delivered exceptional results and received praise from our satisfied clients, including educational institutions.
                 </p>
               </div>
 
@@ -1114,7 +1111,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Printing Services</a>
+              <a href="#" class="footer-link">Outdoor Branding</a>
             </li>
 
             <li>
