--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <!-- 
     - primary meta tags
   -->
-    <title>STES - Sky Tree Solution</title>
-    <!-- <meta name="title" content="STES - Sky Tree Solution"> -->
-    <!-- <meta name="description" content="This is a agency html template made by codewithsadee"> -->
-
+  <title>STES - Sky Tree Solution | One Stop Solution for Web Design, Digital Marketing, Outdoor Branding, Graphic Design</title>
+    <meta name="title" content="STES - Sky Tree Solution">
+    <meta name="description" content="STES - Sky Tree Solution offers a comprehensive range of services, including web design, digital marketing, outdoor branding, and graphic design. We are your one-stop solution for all your creative needs. Contact us today!">
+    <meta name="address" content="STES - Sky Tree Solution, Bharatpur -10, Chitwan, Nepal">
     <!-- 
     - favicon
   -->
