--- a/index.html
+++ b/index.html
@@ -549,12 +549,12 @@
               <img src="./assets/images/logo.png.png" width="209" height="52"
                 alt="stes logo">
             </a>
-            <b> <u>Contact info: </u></b><br />
-            <b>Sky Tree Solution</b>
+            <b class="contact-text"> <u>Contact Details </u></b><br />
+            <b class="contact-text">Sky Tree Solution</b>
             <a href="mailto:info@stes.com.np" class="footer-link">info@stes.com.np</a>
             <a href="mailto:info@stes.com.np" class="footer-link">skytreesolution977@gmail.com</a>
             <a href="tel:+977-9843471099" class="footer-link">+977 -9843471099</a>
-            <p>Bharatpur 10, Hakimchowk, Chitwan, Nepal</p>
+            <p class="contact-text">Bharatpur 10, Hakimchowk, Chitwan, Nepal</p>
 
           </div>
 
