--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
               </h1>
 
               <b class="section-text">
-                Best Website Design in Nepal @
-                Reasonable Price
+                One-stop point for all IT solutions.
               </b>
 
               <!-- <button class="btn btn-secondary">Get Started</button> -->
@@ -175,13 +174,17 @@
               </h2>
 
               <p class="section-text">
-                An established company since 2016, Sky Tree Solution is a Web
-                Development and Design Agency located in Chitwan, Nepal. We
+                Sky Tree Solution, an established company since 2012, is a comprehensive Web Development and Design Agency located in Chitwan, Nepal, specializing in end-to-end web application development. We
                 specialize in graphic design, web design, digital marketing, and
                 outdoor branding services. We're here to captivate your audience
                 with compelling designs, establish a robust online presence,
                 efficiently expand your market reach, and craft impactful brand
-                materials. Partner with us for a lasting collaboration that
+                materials.  our company has successfully executed a
+                wide range of projects for local governments, government
+                agencies, renowned corporations, financial institutions,
+                cooperatives, construction companies, hotels, hospitals and educational institutions,
+                highlighting our expertise in web development, digital
+                marketing, outdoor campaigns, and branding.Partner with us for a lasting collaboration that
                 truly benefits your business.
               </p>
 
@@ -206,7 +209,6 @@
               </h2>
 
               <p class="section-text">
-
                 Discover a complete web development experience with our skilled
                 team. From captivating front-end designs that engage users
                 across devices, to robust back-end functionality ensuring
@@ -216,7 +218,7 @@
                 feature updates, and digital marketing integration, we craft an
                 impactful online presence that drives business growth. Embark on
                 this journey with us and elevate your brand's success in the
-                digital landscape.
+                digital landscape. 
               </p>
             </div>
 
@@ -318,61 +320,6 @@
           </div>
         </section>
 
-        <section class="section project" aria-label="project" id="achievements">
-          <div class="container">
-            <h2 class="h2 section-title">
-              Our <span class="span">Achievements</span>.
-            </h2>
-            <div class="title-wrapper">
-              <p class="section-text">
-                Since establishment, our company has successfully executed a
-                wide range of projects for local governments, government
-                agencies, renowned corporations, financial institutions,
-                cooperatives, hospital managements and educational institutions,
-                highlighting our expertise in web development, digital
-                marketing, outdoor campaigns, and branding. With a committed
-                team and a progressive approach, we consistently attain
-                exceptional results, earning praise from satisfied clients,
-                including educational institutions and government organizations.
-              </p>
-
-              <div>
-              </div>
-
-            </div>
-
-            <!-- span-achievements -->
-            <table>
-              <tr class="number">
-                <td>169+</td>
-                <!-- <td>10+</td> -->
-              </tr>
-              <tr class="text">
-                <td>Project completed</td>
-                <!-- <td>Years of Experience</td> -->
-              </tr>
-              <tr>
-                <td>-</td>
-                <td>-</td>
-              </tr>
-              <tr class="number">
-                <td>85+</td>
-                <td>100+</td>
-              </tr>
-              <tr class="text">
-                <td>Happy Client</td>
-                <td>Monthly Graphic Design</td>
-              </tr>
-            </table>
-            <!-- span-achievements -->
-
-          </div>
-        </section>
-
-        <!-- 
-        - #BLOG
-      -->
-
         <section class="section blog" id="blog" aria-label="blog">
           <div class="container">
 
@@ -380,12 +327,9 @@
               <h2 class="h2 section-title">
                 Our Respected <span class="span">Clients</span>.
               </h2>
-
-              <a href="#" class="btn-link">
-                <!-- <span class="span">Check Our All News</span> -->
-
-                <!-- <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon> -->
-              </a>
+              <p class="section-text">
+                Our journey has been truly exciting, thanks to the incredible range of partners we've collaborated with. From local governments and government agencies to renowned corporations, financial institutions, cooperatives, hospitals, hotels , construction companies, educational institutions, as well as small and mid-sized clients, our portfolio strongly demonstrates our versatility. Our expertise shines through in our work for these diverse entities, showcasing our proficiency in web development, digital marketing, outdoor campaigns, and branding.
+              </p>
             </div>
 
             <ul class="grid-list">
@@ -576,9 +520,9 @@
             <li>
               <a href="#services" class="footer-link">Services</a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#achievements" class="footer-link">Achievements</a>
-            </li>
+            </li> -->
             <li>
               <a href="#blog" class="footer-link">Clients</a>
             </li>
